recursion.cons.butnlast.ButNlast.scala.error
Erreur de compilation :
ButNlast:3: error: type mismatch;
 found   : Int
 required: List[Int]
  if(l.size == n)return l.head
                          ^