recursion.cons.butnlast.ButNlast.scala.code
def butNlast(l:List[Int], n:Int): List[Int] = {
  if(l.size == n)return l.head
  else return l.head::butNlast(l.tail, n)
}